# typegen-dev

./: .gitignore  CMakeLists.txt  LICENSE  README.md  S2_noshrink.yaml  STLcompile.old.yaml  STLcompile.yaml  STLopttest.yaml  Saturn2AnycubicEco.yaml  TypeBitmap.cpp  TypeBitmap.h  bembo30.yaml  build_compose.sh  config.yaml  cooper72.yaml  devinne48.yaml  gadelica36_supports.yaml  goudy24.yaml  goudy30.yaml  images.yaml  logos_chris.yaml  make_script.sh  outtest.yaml  pbm2stl_type.cpp  perpetua_italic_24.yaml  run_STLcompile.sh  run_ttf2stl.sh  t3t_STLcompiler.cpp  t3t_pbm2stl.cpp  t3t_support_types.cpp  t3t_support_types.h  t3t_ttf2pbm.cpp  testallnicks.yaml  tnr72arabic.yaml  ttc24_big_supports.yaml  ttc30.yaml  ttc30_big_supports.yaml  ttc48.yaml  ttc48_big_supports.yaml  ttc48_pyramids.yaml  (+5 more)
include/: AppLog.h  PGMbitmap.h  TypeBitmap.h  t3t_support_types.h
src/: AppLog.cpp  PGMbitmap.cpp  TypeBitmap.cpp  t3t_STLcompiler.cpp  t3t_image2pbm.cpp  t3t_pbm2stl.cpp  t3t_text_composer.cpp  t3t_ttf2pbm.cpp
